{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 96,
  "lineage": "816d68ab-4410-1c61-ba5d-308aab73b953",
  "resources": [
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:security-group/sg-09db22cf215ae92d8",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09db22cf215ae92d8",
            "ingress": [],
            "name": "biomarine-ai-5hw9-cluster-20250926125336307200000008",
            "name_prefix": "biomarine-ai-5hw9-cluster-",
            "owner_id": "245991315809",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-5hw9-cluster",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-5hw9-cluster",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:security-group/sg-003f906441fe19292",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-003f906441fe19292",
            "ingress": [],
            "name": "biomarine-ai-5hw9-node-20250926125336307200000009",
            "name_prefix": "biomarine-ai-5hw9-node-",
            "owner_id": "245991315809",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-5hw9-node",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "owned"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-5hw9-node",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1723426622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09db22cf215ae92d8",
            "security_group_rule_id": "sgr-01b084afbf4fc406e",
            "self": false,
            "source_security_group_id": "sg-003f906441fe19292",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3605862620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-06c9a4232c301586a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3360442814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-05ef1660940e6bb02",
            "self": false,
            "source_security_group_id": "sg-09db22cf215ae92d8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2763293755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-0fcbbbbbf727b78e7",
            "self": false,
            "source_security_group_id": "sg-09db22cf215ae92d8",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1844896685",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-09f747093771d82dd",
            "self": false,
            "source_security_group_id": "sg-09db22cf215ae92d8",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2125127564",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-09ebb8b5e47bf42fe",
            "self": false,
            "source_security_group_id": "sg-09db22cf215ae92d8",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-436988999",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-0a6503af78147f437",
            "self": false,
            "source_security_group_id": "sg-09db22cf215ae92d8",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3170102606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-0cfcbb5374366da69",
            "self": false,
            "source_security_group_id": "sg-09db22cf215ae92d8",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2126260875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-07b088523d4c715cb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2766284256",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-0e51e30093a77f3ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-12420623",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-003f906441fe19292",
            "security_group_rule_id": "sgr-05dc2f9931dc8a346",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:network-acl/acl-0948766dcaf48f125",
            "default_network_acl_id": "acl-0948766dcaf48f125",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0948766dcaf48f125",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "245991315809",
            "subnet_ids": [
              "subnet-0352df30ea6abdc06",
              "subnet-03d336f91466e4a7b",
              "subnet-067b1e7e230ca23e3",
              "subnet-06ea07d0658ecc365",
              "subnet-08c44b79f8772afa1",
              "subnet-0c48d77ac42dc2858"
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-default-nacl",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-default-nacl",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:route-table/rtb-042847160db4e0ba3",
            "default_route_table_id": "rtb-042847160db4e0ba3",
            "id": "rtb-042847160db4e0ba3",
            "owner_id": "245991315809",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-default-rt",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-default-rt",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:security-group/sg-0eeff348663842faa",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0eeff348663842faa",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "245991315809",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-default-sg",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-default-sg",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf3dc8689f1e5e3d",
            "arn": "arn:aws:ec2:us-west-2:245991315809:elastic-ip/eipalloc-0cf3dc8689f1e5e3d",
            "domain": "vpc",
            "id": "eipalloc-0cf3dc8689f1e5e3d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-248-75-41.us-west-2.compute.amazonaws.com",
            "public_ip": "44.248.75.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:internet-gateway/igw-04c51e488eb746bb9",
            "id": "igw-04c51e488eb746bb9",
            "owner_id": "245991315809",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf3dc8689f1e5e3d",
            "association_id": "eipassoc-0cdb4baa327642b82",
            "connectivity_type": "public",
            "id": "nat-0f20bc5cc5254444d",
            "network_interface_id": "eni-004cf73779ed1dc33",
            "private_ip": "10.0.0.100",
            "public_ip": "44.248.75.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c48d77ac42dc2858",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b3325a2af0a0c9581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f20bc5cc5254444d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3325a2af0a0c958",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c51e488eb746bb9",
            "id": "r-rtb-0e1da087656111dc21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1da087656111dc2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:route-table/rtb-0b3325a2af0a0c958",
            "id": "rtb-0b3325a2af0a0c958",
            "owner_id": "245991315809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:route-table/rtb-0e1da087656111dc2",
            "id": "rtb-0e1da087656111dc2",
            "owner_id": "245991315809",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c27b428387b994",
            "route_table_id": "rtb-0b3325a2af0a0c958",
            "subnet_id": "subnet-08c44b79f8772afa1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04656dae1c6645226",
            "route_table_id": "rtb-0b3325a2af0a0c958",
            "subnet_id": "subnet-03d336f91466e4a7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5dba718701ce0a9",
            "route_table_id": "rtb-0b3325a2af0a0c958",
            "subnet_id": "subnet-0352df30ea6abdc06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0618db53170ed31ed",
            "route_table_id": "rtb-0e1da087656111dc2",
            "subnet_id": "subnet-0c48d77ac42dc2858"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07529a94b3e79c631",
            "route_table_id": "rtb-0e1da087656111dc2",
            "subnet_id": "subnet-067b1e7e230ca23e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4255b70a2c86d48",
            "route_table_id": "rtb-0e1da087656111dc2",
            "subnet_id": "subnet-06ea07d0658ecc365"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:subnet/subnet-08c44b79f8772afa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c44b79f8772afa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245991315809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:subnet/subnet-03d336f91466e4a7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d336f91466e4a7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245991315809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private-us-west-2b",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private-us-west-2b",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:subnet/subnet-0352df30ea6abdc06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0352df30ea6abdc06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245991315809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private-us-west-2c",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-private-us-west-2c",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:subnet/subnet-0c48d77ac42dc2858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48d77ac42dc2858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245991315809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public-us-west-2a",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:subnet/subnet-067b1e7e230ca23e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067b1e7e230ca23e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245991315809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public-us-west-2b",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public-us-west-2b",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:subnet/subnet-06ea07d0658ecc365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ea07d0658ecc365",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "245991315809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public-us-west-2c",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc-public-us-west-2c",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store",
              "kubernetes.io/cluster/biomarine-ai-5hw9": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01bf87b10c9652b4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:245991315809:vpc/vpc-01bf87b10c9652b4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0948766dcaf48f125",
            "default_route_table_id": "rtb-042847160db4e0ba3",
            "default_security_group_id": "sg-0eeff348663842faa",
            "dhcp_options_id": "dopt-0b2f643dc59e21d64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bf87b10c9652b4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042847160db4e0ba3",
            "owner_id": "245991315809",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-09-26",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "biomarine-ai-vpc",
              "Owner": "AIDATSRRZTFQTAWT6544P",
              "Project": "retail-store"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}